<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.ParedeFragment">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parede_descricao_titulo"
                android:textColor="@android:color/black"
                android:textSize="@dimen/descricao_titulo"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/parede_descricao_text"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="@dimen/descricao_texto_principal"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/linearLayout3"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <ImageView
                android:id="@+id/image_vertical"
                android:layout_width="@dimen/menu_foto_principal_width"
                android:layout_height="@dimen/menu_foto_principal_height"
                android:layout_gravity="center"
                android:background="@color/botao"
                android:padding="5dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/parede_vertical"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_vertical"
                style="@style/Texto_SubPatologia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/parede_vertical"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout">

            <ImageView
                android:id="@+id/image_horizontal"
                android:layout_width="@dimen/menu_foto_principal_width"
                android:layout_height="@dimen/menu_foto_principal_height"
                android:layout_gravity="center"
                android:background="@color/botao"
                android:padding="5dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/parede_horizontal"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_horizontal"
                style="@style/Texto_SubPatologia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/parede_horizontal"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:id="@+id/image_inclinado"
                android:layout_width="@dimen/menu_foto_principal_width"
                android:layout_height="@dimen/menu_foto_principal_height"
                android:layout_gravity="center"
                android:background="@color/botao"
                android:padding="5dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/parede_inclinado"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_inclinado"
                style="@style/Texto_SubPatologia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/parede_inclinada"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:id="@+id/botao_voltar"
            style="@style/Botao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:text="Voltar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>