<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/fundo"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.ParedeFragment">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/linearLayout3"
            app:layout_constraintTop_toTopOf="@+id/linearLayout3">

            <ImageView
                android:id="@+id/image_abaulamento"
                android:layout_width="@dimen/menu_teto_foto_principal_width"
                android:layout_height="@dimen/menu_teto_foto_principal_height"
                android:layout_gravity="center"
                android:background="@color/botao"
                android:padding="5dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/piso_abaulamento"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_abaulamento"
                style="@style/Texto_SubPatologia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/piso_abaulamento"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_trinca"
                android:layout_width="@dimen/menu_teto_foto_principal_width"
                android:layout_height="@dimen/menu_teto_foto_principal_height"
                android:background="@color/botao"
                android:padding="5dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/piso_trinca"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_trinca"
                style="@style/Texto_SubPatologia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/piso_trinca"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <ImageView
                android:id="@+id/image_gretamento"
                android:layout_width="@dimen/menu_teto_foto_principal_width"
                android:layout_height="@dimen/menu_teto_foto_principal_height"
                android:background="@color/botao"
                android:padding="5dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/piso_gretamento"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_gretamento"
                style="@style/Texto_SubPatologia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/piso_gretamento"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:id="@+id/botao_voltar"
            style="@style/Botao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:text="Voltar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>